# rocq-cats

./: .gitignore  README.md  _CoqProject  dune-project  rocq-categories.opam  rocq-cats.opam
.github/workflows/: ci.yaml
theories/: Meta.v  dune
theories/Cat/: Adjunction.v  CCC.v  Core.v  Functor.v  Morphism.v  Natural.v  Presheaf.v  Pullback.v  Set.v
theories/ETCS/: Core.v  ETCS.v  Nat.v  Sub.v
